--- a/app/templates/credit_cards/index.html
+++ b/app/templates/credit_cards/index.html
@@ -111,6 +111,53 @@
             </div>
         </form>
     </section>
+    <section class="modal fade" tabindex="-1" id="pay-credit-card">
+        <form id="pay-account-receivable-form">
+            <input type="hidden" name="credit-card-id" id="p-credit-card-id">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Make a payment</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="form-floating mt-2">
+                                    <input type="text" name="amount" id="p-amount-id" class="form-control"
+                                        placeholder="Amount" required>
+                                    <label for="amount-id">Amount</label>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-check form-switch mt-2">
+                                    <input class="form-check-input" type="checkbox" name="is-cash" id="p-is-cash-id" switch checked>
+                                    <label class="form-check-label" for="checkNativeSwitch">
+                                        Cash
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-floating mt-2">
+                                <select name="select-bank-account" id="p-select-bank-account-id" class="form-select">
+                                    <option value="none">...Select...</option>
+                                    {% for ba in bank_accounts %}
+                                    <option value="{{ ba.id }}">{{ ba.nick_name }}</option>                                        
+                                    {% endfor %}
+                                </select>
+                                <label for="e-select-bank-account-id" class="p-3">Bank Account</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="makePayment()">Save</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </section>
     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-credit-card">New
     Credit Card</button>
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
@@ -141,6 +188,16 @@
                 <td>
                     <div class="d-flex gap-2">
                         <button 
+                            id=""
+                            type="button"
+                            data-bs-toggle="modal" 
+                            data-bs-target="#pay-credit-card"
+                            class="btn btn-outline-light" 
+                            data-loan-id=""
+                        >
+                        Pay
+                        </button>
+                        <button 
                             type="button" 
                             class="btn btn-success" 
                             data-bs-toggle="modal"
@@ -168,9 +225,19 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const editCreditCard = document.getElementById('edit-credit-card');
+            const editCreditCardModal = document.getElementById('edit-credit-card');
+            const payCreditCardModal = document.getElementById('pay-credit-card');
 
-            editCreditCard.addEventListener('show.bs.modal', function(event) {
+            function toggleBankAccount(checkbox, select){
+                if(checkbox.checked) {
+                    select.disabled = checkbox.checked;
+                    select.value = "none";
+                } else {
+                    select.disabled = checkbox.checked;
+                }
+            }
+
+            editCreditCardModal.addEventListener('show.bs.modal', function(event) {
                 const button = event.relatedTarget;
 
                 const creditCardId = button.getAttribute('data-credit-card-id');
@@ -185,6 +252,17 @@
                 document.getElementById('e-amount-available-id').value = amountAvailable;
                 document.getElementById('e-select-banks-id').value = bankId;
                 document.getElementById('cc-id').value = creditCardId; //Id to edit the right credit card record
+            });
+
+            payCreditCardModal.addEventListener('show.bs.modal', (event) => {
+                const button = event.relatedTarget;
+                const loanId = button.getAttribute('data-loan-id');
+                //document.getElementById('p-loan-id').value = loanId; //Set the loan id to the hidden input so backend can process it as part of the form
+                const isCash = document.getElementById('p-is-cash-id');
+                const bankAccountsSelect = document.getElementById('p-select-bank-account-id');
+
+                toggleBankAccount(isCash, bankAccountsSelect);
+                isCash.addEventListener('change', () => toggleBankAccount(isCash, bankAccountsSelect));
             });
         });
     </script>
