--- a/app/templates/credit_cards/associated_records.html
+++ b/app/templates/credit_cards/associated_records.html
@@ -6,6 +6,45 @@
 
 {% block content %}
     <h3>Expenses</h3>
+    <section class="modal fade" tabindex="-1" id="edit-credit-card-payment">
+        <form id="edit-credit-card-payment-form">
+            <input type="hidden" name="credit-card-payment-id" id="p-credit-card-payment-id">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Edit</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="">
+                                <div class="form-floating mt-2">
+                                    <input type="text" name="amount" id="p-amount-id" class="form-control"
+                                        placeholder="Amount" required>
+                                    <label for="amount-id">Amount</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-floating mt-2">
+                                <select name="select-bank-account" id="p-select-bank-account-id" class="form-select">
+                                    <option value="none">...Select...</option>
+                                    {% for ba in bank_accounts %}
+                                    <option value="{{ ba.id }}">{{ ba.nick_name }}</option>                                        
+                                    {% endfor %}
+                                </select>
+                                <label for="e-select-bank-account-id" class="p-3">Bank Account</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="updateCreditCardPayment()">Save</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </section>
     <a href="{{ url_for('credit_card.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
     <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
                 <table class="table table-striped table-hover" id="expenses-table">
@@ -36,5 +75,111 @@
             </tbody>
         </table>
     </div>
+
+    <h3>Payments</h3>
+    <div id="payments-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-2" style="max-height: 300px;">
+                <table class="table table-striped table-hover" id="expenses-table">
+            <thead class="sticky-top">
+                <tr>
+                    <th scope="col"># Id</th>
+                    <th scope="col">Amount</th>
+                    <th scope="col">Credit Card</th>
+                    <th scope="col">Bank Account</th>
+                    <th scope="col">Create at</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody id="payments-table-body">
+                {% for payment in payments %}                
+                <tr>
+                    <th scope="row">{{ payment.id }}</th>
+                    <td>{{ payment.amount }}</td>
+                    <td>{{ payment.credit_card.nick_name or '-' }}</td>
+                    <td>{{ payment.bank_account.nick_name or '-' }}</td>
+                    <td>{{ payment.created_at }}</td>
+                    <td>
+                        <div class="d-flex gap-2">
+                            <button 
+                                type="button" 
+                                class="btn btn-success" 
+                                data-bs-toggle="modal" 
+                                data-bs-target="#edit-credit-card-payment"
+                                data-endpoint="{{ url_for('accounts_receivable.update_loan_payment', loan_payment_id=payment.id) }}"
+                                data-credit-card-payment-id="{{ payment.id }}"
+                                data-amount="{{ payment.amount }}"
+                                data-credit-card-id="{{ payment.credit_card_id }}"
+                                data-bank-account-id="{{ payment.bank_account_id }}"
+                            >
+                            Edit
+                            </button>
+                            <a href="{{ url_for('accounts_receivable.delete_loan_payment', loan_payment_id=payment.id) }}" class="btn btn-danger">Delete</a>
+                        </div>
+                    </td>
+                </tr>
+                {% endfor %}
+                
+            </tbody>
+        </table>
+    </div>
     <p class="">Total: $0.00</p>
+    <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', e => {
+            const editCreditCardPaymentModal = document.getElementById('edit-credit-card-payment');
+            editCreditCardPaymentModal.addEventListener('show.bs.modal', e => {
+                const button = event.relatedTarget;
+
+                const creditCardPaymentId = button.getAttribute('data-credit-card-payment-id');
+                const oldAmount = button.getAttribute('data-amount');
+                const oldBankAccountId = button.getAttribute('data-bank-account-id');
+
+                document.getElementById('p-credit-card-payment-id').value = creditCardPaymentId;
+                document.getElementById('p-amount-id').value = oldAmount;
+                const bankAccountSelect = document.getElementById('p-select-bank-account-id');
+                bankAccountSelect.value = bankAccountSelect === 'None' ? 'none' : oldBankAccountId;
+
+                console.log('Old Bank Account ID:', oldBankAccountId);
+            });
+        });
+
+        async function updateCreditCardPayment(){
+            const creditCardPaymentId = document.getElementById('p-credit-card-payment-id').value;
+            const form = document.getElementById('edit-credit-card-payment-form');
+            const formData = new FormData(form);
+            
+            try {
+                const response = await fetch(`/credit_card_payments/update/${creditCardPaymentId}`, {
+                    method: 'PUT',
+                    body: formData
+                });
+
+                const data = await response.json();
+                console.log(data);
+
+                if(!response.ok){
+                    console.log(response.json());
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Error',
+                        text: data.error || 'Something went wrong while creating the loan.'
+                    });
+                    return;
+                }
+
+                location.reload();//Reload the current page to see the new added income
+        
+            } catch (error) {
+                console.error('Fetch error:', error);
+
+                Swal.fire({
+                icon: 'error',
+                title: 'Network Error',
+                text: error.message || 'Could not connect to server.'
+                });
+            }
+        }
+        
+    
+    </script>
 {% endblock %}
