--- a/app/templates/credit_cards/associated_records.html
+++ b/app/templates/credit_cards/associated_records.html
@@ -112,7 +112,7 @@
                             >
                             Edit
                             </button>
-                            <a href="{{ url_for('accounts_receivable.delete_loan_payment', loan_payment_id=payment.id) }}" class="btn btn-danger">Delete</a>
+                            <a href="{{ url_for('credit_card_payment.delete', id=payment.id) }}" class="btn btn-danger">Delete</a>
                         </div>
                     </td>
                 </tr>
@@ -124,6 +124,7 @@
     <p class="">Total: $0.00</p>
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
     <script>
         document.addEventListener('DOMContentLoaded', e => {
             const editCreditCardPaymentModal = document.getElementById('edit-credit-card-payment');
