--- a/app/templates/expense_categories/index.html
+++ b/app/templates/expense_categories/index.html
@@ -58,7 +58,7 @@
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-expense-category">New Expense Category</button>
         <div class="row">
             <div class="col-sm">
-                <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px; max-width:max-content">
+                <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
                     <table class="table table-striped  table-hover">
                         <thead class="sticky-top">
                             <tr>
@@ -73,8 +73,8 @@
                                 <th scope="row">{{ expense_category.id }}</th>
                                 <td>{{ expense_category.name }}</td>
                                 <td>
-                                    <div class="row">
-                                        <div class="col-sm my-1">
+                                    <div class="d-flex gap-1">
+                                        <div class="">
                                             <button 
                                                 type="button" 
                                                 class="btn btn-success" 
@@ -86,7 +86,7 @@
                                             Edit
                                             </button>
                                         </div>
-                                        <div class="col-sm my-1">
+                                        <div class="">
                                             <a href="{{ url_for('expense_category.delete', id=expense_category.id) }}" class="btn btn-danger">Delete</a>
                                         </div>
                                     </div>
