--- a/app/templates/withdrawals/index.html
+++ b/app/templates/withdrawals/index.html
@@ -98,7 +98,7 @@
                 </div>
             </form>
         </section>
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-withdrawal-model">New Income</button>
+        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-withdrawal-model"><i class="bi bi-coin"></i> New Income</button>
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
             <table class="table table-striped  table-hover">
                 <thead class="sticky-top">
@@ -132,9 +132,9 @@
                                     data-amount="{{ withdrawal.amount }}"
                                     data-bank-account-id="{{ withdrawal.bank_account_id }}"
                                 >
-                                Edit
+                                <i class="bi bi-pen"></i>
                                 </button>
-                                <a href="{{ url_for('withdrawal.delete', id=withdrawal.id) }}" class="btn btn-danger">Delete</a>
+                                <a href="{{ url_for('withdrawal.delete', id=withdrawal.id) }}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                             </div>
                         </td>
                     </tr>
