--- a/app/templates/withdrawals/index.html
+++ b/app/templates/withdrawals/index.html
@@ -98,7 +98,7 @@
                 </div>
             </form>
         </section>
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-withdrawal-model"><i class="bi bi-coin"></i> New Income</button>
+        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-withdrawal-model"> New Withdrawal <i class="bi bi-coin"></i></button>
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
             <table class="table table-striped  table-hover">
                 <thead class="sticky-top">
@@ -124,7 +124,7 @@
                             <div class="d-flex gap-2">
                                 <button 
                                     type="button" 
-                                    class="btn btn-success" 
+                                    class="btn btn-outline-success" 
                                     data-bs-toggle="modal" 
                                     data-bs-target="#edit-withdrawal-model"
                                     data-withdrawal-id="{{ withdrawal.id }}"
@@ -134,7 +134,7 @@
                                 >
                                 <i class="bi bi-pen"></i>
                                 </button>
-                                <a href="{{ url_for('withdrawal.delete', id=withdrawal.id) }}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
+                                <a href="{{ url_for('withdrawal.delete', id=withdrawal.id) }}" class="btn btn-outline-danger"><i class="bi bi-trash"></i></a>
                             </div>
                         </td>
                     </tr>
