--- a/app/templates/withdrawals/index.html
+++ b/app/templates/withdrawals/index.html
@@ -97,8 +97,36 @@
                     </div>
                 </div>
             </form>
-        </section>
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-withdrawal-model"> New Withdrawal <i class="bi bi-coin"></i></button>
+        </section>        
+        <div class="d-flex justify-content-start gap-1 flex-wrap flex-md-nowrap mt-2">
+            <button 
+                type="button"
+                id="btn-create-expense-id"
+                class="btn btn-outline-primary me-auto me-md-auto w-100 w-md-auto" 
+                style="max-width: 200px;"
+                data-bs-toggle="modal"
+                data-bs-target="#create-withdrawal-model"
+            >New Withdrawal <i class="bi bi-coin"></i>
+            </button>
+            <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
+                <div class="w-md-auto mt-md-0">
+                    <label for="" class="fs-6 fw-bold">Filter by: </label>
+                </div>
+                <div class="w-100 w-md-auto mt-md-0" style="max-width: 250px;">
+                    <select class="form-select" id="select-filter-type-id">
+                        <option value="field">Field</option>
+                        <option value="time">Time</option>
+                    </select>
+                </div>
+            </div>
+            <div class="d-flex gap-1 w-100" style="max-width: 350px;">
+                <div class="w-100 w-md-auto mt-md-0">
+                    <input type="text" class="form-control" id="filter-input-id">
+                </div>
+                <button type="button" class="btn btn-outline-success" id="btn-search-id"><i class="bi bi-search"></i></button>
+            </div>
+        </div>
+
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
             <table class="table table-striped  table-hover">
                 <thead class="sticky-top">
@@ -112,7 +140,7 @@
                     </tr>
                 </thead>
                 
-                <tbody>
+                <tbody  id="withdrawals-table-body-id">
                   {% for withdrawal in withdrawals %}
                     <tr>
                         <th scope="row">{{ withdrawal.id }}</th>
@@ -134,7 +162,7 @@
                                 >
                                 <i class="bi bi-pen"></i>
                                 </button>
-                                <a href="{{ url_for('withdrawal.delete', id=withdrawal.id) }}" class="btn btn-outline-danger"><i class="bi bi-trash"></i></a>
+                                <a href="{{ url_for('withdrawal.delete', id=withdrawal.id) }}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                             </div>
                         </td>
                     </tr>
@@ -147,6 +175,11 @@
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+<script src="{{ url_for('static', filename='scripts/withdrawals/filterData.js') }}"></script>
 
 <script> 
     document.addEventListener('DOMContentLoaded', () => {
