--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -101,6 +101,35 @@
             </form>
         </section>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-income">New Income</button>
+        <div class="d-flex justify-content-start gap-1 flex-wrap flex-md-nowrap mt-2">
+            <button 
+                type="button"
+                id="btn-create-expense-id"
+                class="btn btn-outline-primary me-auto me-md-auto w-100 w-md-auto" 
+                style="max-width: 200px;"
+                data-bs-toggle="modal"
+                data-bs-target="#create-income"
+            >New Income</i>
+            </button>
+            <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
+                <div class="w-md-auto mt-md-0">
+                    <label for="" class="fs-6 fw-bold">Filter by: </label>
+                </div>
+                <div class="w-100 w-md-auto mt-md-0" style="max-width: 250px;">
+                    <select class="form-select" id="select-filter-type-id">
+                        <option value="field">Field</option>
+                        <option value="time">Time</option>
+                    </select>
+                </div>
+            </div>
+            <div class="d-flex gap-1 w-100" style="max-width: 350px;">
+                <div class="w-100 w-md-auto mt-md-0">
+                    <input type="text" class="form-control" id="filter-input-id">
+                </div>
+                <button type="button" class="btn btn-outline-success" id="btn-search-id"><i class="bi bi-search"></i></button>
+            </div>
+        </div>
+        
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
             <table class="table table-striped  table-hover">
                 <thead class="sticky-top">
@@ -114,7 +143,7 @@
                     </tr>
                 </thead>
                 
-                <tbody>
+                <tbody id="incomes-table-body-id">
                   {% for income in incomes %}
                     <tr>
                         <th scope="row">{{ income.id }}</th>
