--- a/app/templates/cashledger/index.html
+++ b/app/templates/cashledger/index.html
@@ -7,7 +7,25 @@
     <div class="container w-75">
 
         <h2>Cash Ledger</h2>
-        
+        <div class="d-flex justify-content-end gap-1 flex-wrap flex-md-nowrap mt-2">
+            <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
+                <div class="w-md-auto mt-md-0">
+                    <label for="" class="fs-6 fw-bold">Filter by: </label>
+                </div>
+                <div class="w-100 w-md-auto mt-md-0" style="max-width: 250px;">
+                    <select class="form-select" id="select-filter-type-id">
+                        <option value="field">Field</option>
+                        <option value="time">Time</option>
+                    </select>
+                </div>
+            </div>
+            <div class="d-flex gap-1 w-100" style="max-width: 350px;">
+                <div class="w-100 w-md-auto mt-md-0">
+                    <input type="text" class="form-control" id="filter-input-id">
+                </div>
+                <button type="button" class="btn btn-outline-success" id="btn-search-id"><i class="bi bi-search"></i></button>
+            </div>
+        </div>
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
             <table class="table table-striped  table-hover">
                 <thead class="sticky-top">
@@ -20,7 +38,7 @@
                     </tr>
                 </thead>
                 
-                <tbody id="incomes-table-body-id">
+                <tbody id="cashledger-table-body-id">
                   {% for ledger in ledgers %}
                     <tr>
                         <th scope="row">{{ ledger.id }}</th>
@@ -44,5 +62,6 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
 <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
+<script src="{{ url_for('static', filename='scripts/cashledger/filterData.js' ) }}"></script>
 
 {% endblock %}
