--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -1,42 +1,80 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    {{data.bank_account.nick_name}}
+    {{bank_account.nick_name}}
 {% endblock %}
 
 {% block content %}
-    <h3>{{ data.bank_account.nick_name }}</h3>
-    <h4 class="mt-2">Expenses</h4>
-    <a href="{{ url_for('bank_account.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
-    <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
-                <table class="table table-striped table-hover" id="expenses-table">
-            <thead class="sticky-top">
-                <tr>
-                    <th scope="col"># Id</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Credit Card</th>
-                    <th scope="col">Bank Account</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Create at</th>
-                </tr>
-            </thead>
-            <tbody id="expenses-table-body">
-                {% for expense in data.expenses %}                
-                <tr>
-                    <th scope="row">{{ expense.id }}</th>
-                    <td>{{ expense.amount }}</td>
-                    <td> {{ expense.description or '-' }} </td>
-                    <td>{{ expense.credit_card.nick_name or '-' }}</td>
-                    <td>{{ expense.bank_account.nick_name }}</td>
-                    <td>{{ expense.expense_category.name }}</td>
-                    <td>{{ expense.created_at }}</td>
-                </tr>
-                {% endfor %}
-                
-            </tbody>
-        </table>
+    <h3>{{ bank_account.nick_name }}</h3>
+    <a href="{{ url_for('bank_account.index') }}" class="btn btn-light fs-5"><i class="bi bi-arrow-return-left"></i> Go back</a>
+    <div class="my-3">
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 322px;">
+            <h4 class="d-flex justify-content-center">Expenses</h4>
+            <table class="table table-borderless table-hover" id="expenses-table">
+                <thead class="sticky-top" >
+                    <tr class="table-danger">
+                        <th scope="col" class="text-center"># Id</th>
+                        <th scope="col" class="text-center">Amount</th>
+                        <th scope="col" class="">Description</th>
+                        <th scope="col" class="text-center">Credit Card</th>
+                        <th scope="col" class="text-center">Bank Account</th>
+                        <th scope="col" class="text-center">Category</th>
+                        <th scope="col" class="text-center">Create at</th>
+                    </tr>
+                </thead>
+                <tbody id="expenses-table-body">
+                    {% for expense in bank_account.expenses %}                
+                    <tr>
+                        <th scope="row" class="text-center">{{ expense.id }}</th>
+                        <td class="text-center">{{ expense.amount }}</td>
+                        <td> {{ expense.description or '-' }} </td>
+                        <td class="text-center">{{ expense.credit_card.nick_name or '-' }}</td>
+                        <td class="text-center">{{ expense.bank_account.nick_name }}</td>
+                        <td class="text-center">{{ expense.expense_category.name }}</td>
+                        <td class="text-center">{{ expense.created_at }}</td>
+                    </tr>
+                    {% endfor %}
+                    
+                </tbody>
+            </table>
+        </div>
+        <p class="fs-6 fw-bold">Total: {{ total_amount(bank_account.expenses) }}</p>
     </div>
-    <p class="">Total: {{ data.total_expenses }}</p>
 
+
+    <div class="my-5">
+        <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 322px;">
+            <h4 class="d-flex justify-content-center">Incomes</h4>
+            <table class="table table-borderless table-hover">
+                <thead class="sticky-top">
+                    <tr class="table-info">
+                        <th scope="col" class="text-center"># Id</th>
+                        <th scope="col" class="text-center">Amount</th>
+                        <th scope="col" class="text-center">Is Cash</th>
+                        <th scope="col" class="">Description</th>
+                        <th scope="col" class="text-center">Bank Account</th>
+                        <th scope="col" class="text-center">Create at</th>
+                    </tr>
+                </thead>
+                
+                <tbody id="incomes-table-body-id">
+                  {% for income in bank_account.incomes %}
+                    <tr>
+                        <th scope="row" class="text-center">{{ income.id }}</th>
+                        <td class="text-center">{{ income.amount }}</td>
+                        <td class="text-center">{{ income.is_cash }}</td>
+                        <td class="">{{ income.description if income.description else '-'}}</td>
+                        <td class="text-center">{{ income.bank_account.nick_name }}</td>
+                        <td class="text-center">{{ income.created_at }}</td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <p class="fs-6 fw-bold">Total: {{ total_amount(bank_account.incomes) }}</p>
+    </div>
+
+    <div class="my-5">
+        
+    </div>
 {% endblock %}
